# simple-gtest

./: CMakeLists.txt  readme.md
include/: io.hpp
src/: CMakeLists.txt  io.cpp  main.cpp
test/: CMakeLists.txt  test_tools.cpp
